# dota2announcer

./: Cargo.toml  LICENSE  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml
src/: audio.rs  embed.rs  game.rs  main.rs  settings.rs
web/: gamestate_integration_announcer.cfg  index.html  main.js
web/lib/: element-ui.js
