[package]
name = "dota2announcer"
version = "0.1.0"
authors = ["Smrekii"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/rocket" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.13.0"
winreg = "0.8.0"
rust-embed = { version = "5.7.0", features = ["compression", "interpolate-folder-path"] }

# windows tray integration
systray = "0.4.0"
opener = "0.4.1"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/rocket"
version = "0.5.0-dev"
default-features = false
features = ["json", "serve"]

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "Dota2 Announcer"
LegalCopyright = "Smrekii © 2021"